Updated query to reduce data size in responses
