# app/api/agent/__init__.py
@@ -1,28 +1,37 @@
 from app.model.buffer import Buffer, get_buffer_used_size
-from app.model.response import ValuedResponse, Response
-from app.model.agent import Agent, load_agent_settings, save_agent_settings
+from app.model.response import ValuedResponse, Response, ExceptionResponse
+from app.model.agent import Agent, load_agent_settings, save_agent_settings, get_loaded_agent
+import tensorflow as tf
 
 
-def remember(body):
-    Buffer().store(body)
-    return ValuedResponse("updated buffer memory", body).__dict__
+def remember(body: list):
+    try:
+        Buffer().store(body)
+        return Response("added {} line(s) to buffer".format(len(body))).__dict__
+    except Exception as e:
+        return ExceptionResponse(e).__dict__, 500
 
 
 def set_weights(body):
-    agent = Agent()
-    agent.set_actor_weights(body)
-    return ValuedResponse("updated actor weights", agent.get_actor_weights().tolist()).__dict__
+    try:
+        agent = Agent()
+        agent.set_actor_weights(body)
+        return ValuedResponse("updated actor weights", agent.get_actor_weights().tolist()).__dict__
+    except Exception as e:
+        return ExceptionResponse(e).__dict__, 500
 
 
 def get_weights():
-    agent = Agent()
-    agent.load_models()
+    agent = get_loaded_agent()
     return agent.get_actor_weights().tolist()
 
 
 def set_settings(body):
-    save_agent_settings(body)
-    return ValuedResponse("Updated agent settings", load_agent_settings()).__dict__
+    try:
+        save_agent_settings(body)
+        return ValuedResponse("Updated agent settings", load_agent_settings()).__dict__
+    except Exception as e:
+        return ExceptionResponse(e).__dict__, 500
 
 
 def get_settings():
@@ -30,13 +39,31 @@ def get_settings():
 
 
 def learn():
-    buffer_used_size = get_buffer_used_size()
-    if buffer_used_size > 0:
-        update_actor = buffer_used_size >= Buffer().settings.mem_size/2.
-        agent = Agent()
-        agent.load_models()
-        used_batch_size = agent.learn(update_actor)
-        agent.save_models()
-        return ValuedResponse("learned using {} items batch random sample from buffer".format(used_batch_size),
-                              agent.get_actor_weights().tolist()).__dict__
-    return Response("can't learn without experience", status="bad query").__dict__, 400
+    try:
+        buffer_used_size = get_buffer_used_size()
+        if buffer_used_size > 0:
+            agent = get_loaded_agent()
+            agent.learn(True)
+            agent.save_models()
+            return agent.get_actor_weights().tolist()
+        return Response("can't learn without experience", status="bad query").__dict__, 400
+    except Exception as e:
+        return ExceptionResponse(e).__dict__, 500
+
+
+def test_actor(body):
+    try:
+        agent = get_loaded_agent()
+        state = tf.convert_to_tensor(body, dtype=tf.float32)
+        return agent.actor(state, training=False).numpy().tolist()
+    except Exception as e:
+        return ExceptionResponse(e).__dict__, 500
+
+
+def test_critic(body):
+    try:
+        agent = get_loaded_agent()
+        state_action = tf.convert_to_tensor(body, dtype=tf.float32)
+        return agent.critic(state_action, training=False).numpy().tolist()
+    except Exception as e:
+        return ExceptionResponse(e).__dict__, 500
