# app/model/agent.py
@@ -2,6 +2,7 @@ from app.model.actor import ActorNetwork
 from app.model.critic import CriticNetwork
 from tensorflow.keras.optimizers import Adam
 import tensorflow as tf
+import numpy as np
 from tensorflow import keras
 from app.model.buffer import get_buffer_sample
 from app.model.settings import data_dir
@@ -9,6 +10,12 @@ from os import path
 import json
 
 agent_settings_path = path.join(data_dir, 'agent.json')
+
+
+def get_loaded_agent():
+    agent = Agent()
+    agent.load_models()
+    return agent
 
 
 def load_agent_settings():
@@ -49,15 +56,19 @@ class Agent:
         self.critic.compile(optimizer=Adam(learning_rate=beta))
         self.target_actor.compile(optimizer=Adam(learning_rate=alpha))
         self.target_critic.compile(optimizer=Adam(learning_rate=beta))
-
         self.update_network_parameters(tau_actor=1, tau_critic=1)
+        
+        self.actor(tf.convert_to_tensor([np.zeros(n_inputs)]))
+        self.target_actor(tf.convert_to_tensor([np.zeros(n_inputs)]))
+        self.critic(tf.convert_to_tensor([np.zeros(n_inputs+n_actions)]))
+        self.target_critic(tf.convert_to_tensor([np.zeros(n_inputs+n_actions)]))
 
     def set_settings(self):
         settings = load_agent_settings()
         if 'min_action' in settings:
             self.min_action = settings['min_action']
         if 'max_action' in settings:
-            self.min_action = settings['max_action']
+            self.max_action = settings['max_action']
 
     def update_network_parameters(self, tau_actor=None, tau_critic=None):
         if tau_actor is None:
@@ -80,17 +91,17 @@ class Agent:
         tf_weights = tf.convert_to_tensor([[[w] for w in weights]], dtype=tf.float32)
         self.actor.set_weights(tf_weights)
         self.target_actor.set_weights(tf_weights)
-        self.actor.save()
-        self.target_actor.save()
+        self.actor.save_model()
+        self.target_actor.save_model()
 
     def get_actor_weights(self):
         return tf.squeeze(self.actor.get_weights()).numpy()
 
     def save_models(self):
-        self.actor.save()
-        self.critic.save()
-        self.target_actor.save()
-        self.target_critic.save()
+        self.actor.save_model()
+        self.critic.save_model()
+        self.target_actor.save_model()
+        self.target_critic.save_model()
 
     def load_models(self):
         self.actor.load()
@@ -106,9 +117,10 @@ class Agent:
         new_states = tf.convert_to_tensor(new_states, dtype=tf.float32)
 
         with tf.GradientTape() as tape:
-            target_actions = self.target_actor(new_states)
-            critic_value_ = tf.squeeze(self.target_critic(tf.concat([new_states, target_actions],axis=1)), 1)
-            critic_value = tf.squeeze(self.critic(tf.concat([states, actions], axis=1)), 1)
+            target_actions = self.target_actor(new_states, training=True)
+            critic_value_ = tf.squeeze(self.target_critic(tf.concat([new_states, target_actions], axis=1),
+                                                          training=True), 1)
+            critic_value = tf.squeeze(self.critic(tf.concat([states, actions], axis=1), training=True), 1)
             target = rewards + self.gamma * critic_value_ * (1 - done)
             critic_loss = keras.losses.MSE(target, critic_value)
 
@@ -118,8 +130,8 @@ class Agent:
                                                   self.critic.trainable_variables))
         if update_actor:
             with tf.GradientTape() as tape:
-                new_policy_actions = self.actor(states)
-                actor_loss = -self.critic(tf.concat([states, new_policy_actions], axis=1))
+                new_policy_actions = self.actor(states, training=True)
+                actor_loss = -self.critic(tf.concat([states, new_policy_actions], axis=1), training=True)
                 actor_loss = tf.math.reduce_mean(actor_loss)
 
             actor_network_gradient = tape.gradient(actor_loss, self.actor.trainable_variables)
